# university-hangman

./: .gitignore  404.html  CMakeLists.txt  hashmap.json  index.html  readme.md
.github/workflows/: build.yml  deploy.yml
assets/: app.c738a677.js  guide_development_architecture.md.05175cb2.js  guide_development_architecture.md.05175cb2.lean.js  guide_development_design.md.3b8cb6cf.js  guide_development_design.md.3b8cb6cf.lean.js  guide_development_technical-requirements.md.5c7e7714.js  guide_development_technical-requirements.md.5c7e7714.lean.js  guide_development_technical-requirements.md.bd6b8f3d.js  guide_index.md.5f9c1b1c.js  guide_installation_code-style.md.5840c500.js  guide_installation_code-style.md.5840c500.lean.js  guide_installation_conventional-branchs.md.5a453852.js  guide_installation_conventional-branchs.md.5a453852.lean.js  guide_installation_conventional-commits.md.5fa28bd7.js  guide_installation_conventional-commits.md.5fa28bd7.lean.js  guide_installation_conventional-commits.md.d3a9a178.js  guide_installation_conventional-commits.md.d3a9a178.lean.js  guide_installation_conventional-naming.md.a0defa73.js  guide_installation_conventional-naming.md.a0defa73.lean.js  guide_installation_git.md.7aa2cea2.js  guide_installation_git.md.7aa2cea2.lean.js  guide_installation_index.md.8b37abff.js  guide_installation_index.md.8b37abff.lean.js  guide_installation_index.md.9e60b82e.js  guide_installation_index.md.9e60b82e.lean.js  guide_installation_qt.md.71a080dc.lean.js  guide_introduction_roadmap.md.5c935497.js  guide_introduction_what-is-hangman.md.0b283c33.js  guide_introduction_what-is-hangman.md.b4f2f889.js  guide_introduction_what-is-hangman.md.b4f2f889.lean.js  guide_introduction_what-is-hangman.md.fad87702.js  guide_iterations_index.md.5a7b4e11.js  guide_iterations_index.md.cecd7726.js  guide_iterations_index.md.cecd7726.lean.js  guide_iterations_sprint-1.md.390fe60c.js  guide_iterations_sprint-1.md.390fe60c.lean.js  guide_iterations_sprint-2.md.03799d28.js  guide_iterations_sprint-2.md.03799d28.lean.js  guide_iterations_sprint-2.md.1ed7bf81.js  guide_iterations_sprint-2.md.da28a53c.js  (+6 more)
assets/chunks/: 13-design-game-over-widget.e59e2dee.js  framework.389d77d5.js  theme.e6b49f61.js
docs/: index.md  package-lock.json
docs/.vitepress/: config.ts
docs/guide/development/: architecture.md  design.md  technical-requirements.md
docs/guide/installation/: code-style.md  conventional-branchs.md  conventional-commits.md  conventional-naming.md  git.md  index.md  qt.md
docs/guide/introduction/: roadmap.md  what-is-hangman.md  what-is-hangmen.md
docs/guide/iterations/: index.md  sprint-1.md  sprint-2.md  sprint-3.md
guide/: index.html
guide/development/: architecture.html  design.html  technical-requirements.html
guide/installation/: code-style.html  conventional-branchs.html  conventional-commits.html  conventional-naming.html  git.html  index.html  qt.html
guide/introduction/: roadmap.html  what-is-hangman.html
guide/iterations/: index.html  sprint-1.html  sprint-2.html  sprint-3.html
resources/: words-for-hangman.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/components/controller/: CMakeLists.txt  GameController.cpp  gamecontroller.cpp  gamecontroller.h
src/components/randomizer/: CMakeLists.txt  wordrandomizer.cpp  wordrandomizer.h
src/components/style/: CMakeLists.txt  style.cpp  style.h
src/widgets/aboutwidget/: CMakeLists.txt  aboutwidget.cpp  aboutwidget.h
src/widgets/gameoverwidget/: CMakeLists.txt  gameoverwidget.cpp  gameoverwidget.h
src/widgets/gamestartwidget/: CMakeLists.txt  gamestartwidget.cpp  gamestartwidget.h
src/widgets/gamewidget/: CMakeLists.txt  gamewidget.cpp  gamewidget.h
src/widgets/homewidget/: CMakeLists.txt  homewidget.cpp  homewidget.h
